--- a/package.json
+++ b/package.json
@@ -17,4 +17,11 @@
     "shadcn/ui": "*"
   },
   "type": "module"
+  "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "export": "next export",
+  "deploy": "next build && next export && gh-pages -d out"
+}
+
 }
