--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "upskill-fam",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,12 +19,7 @@
     "tailwindcss": "^3.4.1",
     "shadcn/ui": "*"
   },
-  "type": "module"
-  "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "export": "next export",
-  "deploy": "next build && next export && gh-pages -d out"
-}
-
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
