--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1",
-    "shadcn/ui": "*"
+    "tailwindcss": "^3.4.1"
+    
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
